feat: add update & delete database methods

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,10 @@
 	"description": "Add methods to handle structured data",
 	"pages": [
 		{
+			"name": "database",
+			"filename": "pages/Database.js"
+		},
+		{
 			"name": "database-new",
 			"filename": "pages/DatabaseNew.js"
 		}
