--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,9 @@
 {
 	"name": "Database",
 	"description": "Add methods to handle structured data",
+    "version": "0.0.1",
+    "author": "Henrique Oliveira",
+    "order": 10,
     "imports": [
         {
             "name": "database:imports",
