--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.29.0",
     "globals": "^15.11.0",
-    "typescript-eslint": "^8.10.0"
+    "typescript-eslint": "^8.10.0",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   }
 }
