refacotr: rename database-single page

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
 	"pages": [
 		{
 			"name": "database",
-			"filename": "pages/DatabaseSingle.vue"
+			"filename": "pages/Database.vue"
 		},
 		{
 			"name": "database-item-list",
