feat: initial view single page

--- a/manifest.json
+++ b/manifest.json
@@ -26,8 +26,11 @@
         {
             "name": "item",
             "filename": "pages/Item.vue"
+        },
+        {
+            "name": "view",
+            "filename": "pages/View.vue"
         }
-
 	],
 	"menu": [
 		{
